<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PALM Messenger RAG</string>
    <string name="notification_service_label">Notification Forwarder</string>
    <string name="description">Forwards WhatsApp, Telegram and other messaging app notifications to your backend server for RAG-powered e-mail digests.</string>
    <string name="label_server_url">Backend Server URL</string>
    <string name="hint_server_url">http://192.168.1.10:8000</string>
    <string name="btn_save">Save</string>
    <string name="btn_grant_permission">Open Notification Access Settings</string>
</resources>
